--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cross-fetch": "^2.0.0",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "rc-calendar": "^9.6.0",
@@ -24,9 +25,12 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-api-middleware": "^2.2.0",
     "redux-burger-menu": "^0.2.4",
     "redux-form": "^7.2.3",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.9.1",
+    "redux-persist-transform-filter": "0.0.16",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
